--- a/assets/themes/dinky/css/styles.css
+++ b/assets/themes/dinky/css/styles.css
@@ -225,10 +225,6 @@ p.header {
 	font-size: 16px;
 }
 
-h4.header {
-	color: #fff;
-}
-
 h1.header {
 	font-family: 'Arvo', sans-serif;
 	font-size: 30px;
@@ -239,7 +235,7 @@ h1.header {
 }
 
 
-h1.header, a.header, a.name, header a{
+h4.header, h1.header, a.header, a.name, header a{
 	color: #fff;
 }
 
