--- a/assets/themes/dinky/css/styles.css
+++ b/assets/themes/dinky/css/styles.css
@@ -138,6 +138,25 @@ hr {
   margin:0 0 24px;
 }
 
+/* generics */
+.float-left {
+  float: left;
+}
+
+.float-right {
+  float: right;
+}
+
+.img-left {
+  float: left;
+  margin-right: 10px;
+}
+
+.img-right {
+  float: right;
+  margin-left: 10px;
+}
+
 /* Images */
 
 img {
