--- a/assets/themes/dinky/css/styles.css
+++ b/assets/themes/dinky/css/styles.css
@@ -306,8 +306,8 @@ header li:hover {
 }
 
 .posts li {
-  font-size: 20px;
-  padding-bottom: 1.4em;
+  font-size: 1.4em;
+  padding-bottom: 20px;
 }
 
 a.buttons {
@@ -393,8 +393,8 @@ footer {
   }
 
   .posts li {
-    font-size: 20px;
-    padding-bottom: 1.4em;
+    font-size: 1.4em;
+    padding-bottom: 20px;
   }
 }
 
