--- a/assets/themes/dinky/css/styles.css
+++ b/assets/themes/dinky/css/styles.css
@@ -157,10 +157,6 @@ hr {
   margin-left: 10px;
 }
 
-.clear-both {
-  clear: both;
-}
-
 /* Images */
 
 img {
@@ -345,6 +341,9 @@ section {
   padding-bottom:50px;
 }
 
+section p {
+  clear: both;
+}
 
 /* Footer */
 
