--- a/_includes/themes/dinky/post.html
+++ b/_includes/themes/dinky/post.html
@@ -3,5 +3,22 @@
 
   {{ content }}
 
+<div class="pagination">
+    <ul>
+        {% if page.previous %}
+            <li class="prev"><a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Prev</a></li>
+        {% else %}
+            <li class="prev disabled"><a>&larr; Prev</a></li>
+        {% endif %}
+            <li><a href="{{ BASE_PATH }}{{ site.JB.archive_path }}">Archive</a></li>
+	{% if page.next %}
+            <li class="next"><a href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">Next &rarr;</a></li>
+        {% else %}
+            <li class="next disabled"><a>Next &rarr;</a></li>
+        {% endif %}
+    </ul>
+</div>
+
   {% include JB/comments %}
 </section>
+
