remove more twitter. stylize pagination

--- a/assets/themes/dinky/css/styles.css
+++ b/assets/themes/dinky/css/styles.css
@@ -347,6 +347,15 @@ section {
   float: left;
 }
 
+.pagination {
+  clear: both;
+  text-align: center;
+}
+
+.pagination li {
+  display: inline;
+}
+
 /* Footer */
 
 footer {
