--- a/assets/themes/dinky/css/styles.css
+++ b/assets/themes/dinky/css/styles.css
@@ -408,10 +408,21 @@ footer {
   header ul {
     padding: 0 0 0 10px;
     float: left;
+    margin: 0;
+  }
+
+  header h4 { 
+    display: none;
   }
 
   header li {
     display: inline-block;
+  }
+
+  
+
+  p.header {
+    display: none;
   }
 
   .posts li {
