--- a/assets/themes/dinky/css/styles.css
+++ b/assets/themes/dinky/css/styles.css
@@ -395,9 +395,13 @@ footer {
     margin-bottom: 20px;
     position: relative;
   }
+
+  header:after {
+    clear: both;
+  }
   
   section {
-    padding:20px 84px 20px 50px;
+    padding:20px 15px 20px 20px;
     margin:0 0 20px;
   }
   
@@ -419,7 +423,9 @@ footer {
     display: inline-block;
   }
 
-  
+  img {
+    max-width: 100%;
+  }
 
   p.header {
     display: none;
