--- a/assets/themes/dinky/css/styles.css
+++ b/assets/themes/dinky/css/styles.css
@@ -449,7 +449,7 @@ footer {
   }
 
   section {
-    padding:10px 0 10px 20px;
+    padding:0 0 10px 20px;
     margin:0 0 30px;
   }
 
@@ -476,6 +476,17 @@ footer {
 		display:block;
 	}
 
+  .posts li {
+    visibility: hidden;
+  }
+
+  .posts li span {
+    display: none;
+  }
+
+  .posts li a {
+    visibility: visible;
+  }
 }
 
 @media print {
