--- a/assets/themes/dinky/css/styles.css
+++ b/assets/themes/dinky/css/styles.css
@@ -484,8 +484,15 @@ footer {
     display: none;
   }
 
+  .posts li {
+    padding: 0 0 7pt 0;
+    list-style: none;
+    margin: 0;
+  }
+
   .posts li a {
     visibility: visible;
+    font-size: 13pt;
   }
 }
 
