--- a/_includes/themes/dinky/default.html
+++ b/_includes/themes/dinky/default.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="author" content="{{ site.author.name }}" />
-    <meta name="description" content="{{ site.meta.description }} - {{ page.title }}" />
+    <meta name="description" content="{{ site.meta.description }}{% if page.title }} - {{ page.title }}{% endif %}" />
     <meta name="keywords" content="{{ site.meta.keywords }}" />
     <title>{{ page.title }}</title>
 
