--- a/_includes/themes/dinky/default.html
+++ b/_includes/themes/dinky/default.html
@@ -45,28 +45,28 @@
           <h4 class="header">about</h4>
           <ul>
             {% if site.author.about %}
-            <li class="about"><a href="/{{ site.author.about }}" rel="me">About This</a></li>
+            <li class="about"><a href="/{{ site.author.about }}" rel="me">about this</a></li>
             {% endif %}
             {% if site.author.email %}
 <!--            <li class="contact"><address><span class="author fn n">{{ site.author.name }}</span> - <span class="fn email">{{ site.author.email }}</span></address></li>-->
             {% endif %}
             {% if site.author.github %}
-            <li class="github"><a href="http://github.com/{{ site.author.github }}/" target="_blank" rel="me">github/{{ site.author.github }}</a></li>
+            <li class="github"><a href="http://github.com/{{ site.author.github }}/" target="_blank" rel="me">github / {{ site.author.github }}</a></li>
             {% endif %}
             {% if site.author.twitter %}
-            <li class="twitter"><a href="http://twitter.com/{{ site.author.twitter }}/" target="_blank" rel="me">twitter/{{ site.author.twitter }}</a></li>
+            <li class="twitter"><a href="http://twitter.com/{{ site.author.twitter }}/" target="_blank" rel="me">twitter / {{ site.author.twitter }}</a></li>
             {% endif %}
             {% if site.author.facebook %}
-            <li class="facebook"><a href="http://facebook.com/{{ site.author.facebook }}/" target="_blank" rel="me">facebook/{{ site.author.facebook }}</a></li>
+            <li class="facebook"><a href="http://facebook.com/{{ site.author.facebook }}/" target="_blank" rel="me">facebook / {{ site.author.facebook }}</a></li>
             {% endif %}
             {% if site.author.flickr %}
-            <li class="flickr"><a href="http://flickr.com/{{ site.author.flickr }}/" target="_blank" rel="me">flickr/{{ site.author.flickr }}</a></li>
+            <li class="flickr"><a href="http://flickr.com/{{ site.author.flickr }}/" target="_blank" rel="me">flickr / {{ site.author.flickr }}</a></li>
             {% endif %}
             {% if site.author.yelp %}
-            <li class="yelp"><a href="http://{{ site.author.yelp }}.yelp.com/" target="_blank" rel="me">{{ site.author.yelp }}.yelp</a></li>
+            <li class="yelp"><a href="http://{{ site.author.yelp }}.yelp.com/" target="_blank" rel="me">yelp / {{ site.author.yelp }}</a></li>
             {% endif %}
             {% if site.author.pinterest %}
-            <li class="pinterest"><a href="http://pinterest.com/{{ site.author.pinterest }}" target="_blank" rel="me">pinterest/{{ site.author.pinterest }}</a></li>
+            <li class="pinterest"><a href="http://pinterest.com/{{ site.author.pinterest }}" target="_blank" rel="me">pinterest / {{ site.author.pinterest }}</a></li>
             {% endif %}
           </ul>
         </div><!-- misc -->
